[package]
name = "query_tests"
version = "0.1.0"
authors = ["Andrew Lamb <andrew@nerdnetworks.org>"]
edition = "2021"
description = "Tests of the query engine against different database configurations"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
read_buffer = { path = "../read_buffer" }
